--- a/sri_route/pubspec.yaml
+++ b/sri_route/pubspec.yaml
@@ -59,7 +59,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
 assets:
-    - assets/background.jpg
+    - assets/sri_dalada.png
+    - assets/basilica.png
+    - assets/red_mosque.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
