--- a/sri_route/pubspec.yaml
+++ b/sri_route/pubspec.yaml
@@ -62,6 +62,8 @@ assets:
     - assets/sri_dalada.png
     - assets/basilica.png
     - assets/red_mosque.png
+    - assets/map.png
+    - assets/user_profile.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
