--- a/welcomepages/pubspec.yaml
+++ b/welcomepages/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
     - assets/welcomepage1.png
     - assets/welcomepage2.png
     - assets/welcomepage3.png
+    - assets/welcomepage4.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
