--- a/welcomepages/pubspec.yaml
+++ b/welcomepages/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
     - assets/welcomepage2.png
     - assets/welcomepage3.png
     - assets/welcomepage4.png
+    - assets/welcomepage5.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
