--- a/religious_sites/pubspec.yaml
+++ b/religious_sites/pubspec.yaml
@@ -58,3 +58,57 @@ flutter:
     - assets/images/Colombo_Grand_Mosque.jpg
     - assets/images/Kollupitiya_Mosque.jpg
     - assets/images/Maradana_Mosque.jpg
+# Kandy
+    - assets/images/Temple_of_the_Tooth.jpg
+    - assets/images/Lankatilaka_Vihara.jpg
+    - assets/images/Gadaladeniya_Vihara.jpg
+    - assets/images/Embekka_Devalaya.jpg
+    - assets/images/Degaldoruwa_Raja_Maha_Vihara.jpg
+    - assets/images/St_Paul’s_Church.jpg
+    - assets/images/Trinity_College_Chapel.jpg
+    - assets/images/St_Anthony’s_Cathedral.jpg
+    - assets/images/Church_of_Ceylon.jpg
+    - assets/images/Kandy_Methodist_Church.jpg
+    - assets/images/Kataragama_Devale.jpg
+    - assets/images/Sri_Maha_Vishnu_Devale.jpg
+    - assets/images/Pattini_Devale.jpg
+    - assets/images/Natha_Devale.jpg
+    - assets/images/Kandy_Jumma_Mosque.jpg
+    - assets/images/Meera_Makam_Mosque.jpg
+    - assets/images/Hanafi_Mosque.jpg
+    - assets/images/Katugastota_Mosque.jpg
+    - assets/images/Peradeniya_Mosque.jpg
+    # Jaffna
+    - assets/images/Nagadeepa_Purana_Vihara.jpg
+    - assets/images/St_James’_Church.jpg
+    - assets/images/St_Mary’s_Cathedral.jpg
+    - assets/images/Jaffna_Methodist_Church.jpg
+    - assets/images/St_John’s_Church.jpg
+    - assets/images/Nallur_Kandaswamy_Temple.jpg
+    - assets/images/Naguleswaram_Temple.jpg
+    - assets/images/Keerimalai_Naguleswaram_Kovil.jpg
+    - assets/images/Vallipuram_Kovil.jpg
+    - assets/images/Jaffna_Jumma_Mosque.jpg
+    - assets/images/Grand_Mosque_Jaffna.jpg
+    - assets/images/Chavakachcheri_Mosque.jpg
+    # Galle
+    - assets/images/Rumassala_Temple.jpg
+    - assets/images/Dutch_Reformed_Church.jpg
+    - assets/images/All_Saints’_Church_Galle.jpg
+    - assets/images/St_Mary’s_Cathedral_Galle.jpg
+    - assets/images/Galle_Methodist_Church.jpg
+    - assets/images/Meeran_Jumma_Mosque.jpg
+    - assets/images/Galle_Fort_Mosque.jpg
+    - assets/images/Ambalangoda_Mosque.jpg
+    # Anuradhapura
+    - assets/images/Jaya_Sri_Maha_Bodhi.jpg
+    - assets/images/Ruwanwelisaya.jpg
+    - assets/images/Mihintale.jpg
+    - assets/images/Abhayagiri_Vihara.jpg
+    - assets/images/Jetavanaramaya.jpg
+    - assets/images/St_Joseph’s_Church.jpg
+    - assets/images/Natha_Devale.jpg
+    - assets/images/Shiva_Devale_No_1.jpg
+    - assets/images/Shiva_Devale_No_2.jpg
+    - assets/images/Anuradhapura_Grand_Mosque.jpg
+    - assets/images/Anuradhapura_Town_Mosque.jpg
